Implement basic vacancies loading logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 	<string name="app_name">HH Mini Client</string>
     <string name="search">Search</string>
     <string name="clear">Clear</string>
+    <string name="n_a">N/A</string>
+    <string name="error_empty">Empty</string>
 </resources>
