--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="error_empty">Empty</string>
     <string name="no_vacancies">No Vacancies Found</string>
     <string name="no_network">No Network</string>
+    <string name="area">Area:</string>
 </resources>
